force-app/main/default/objects/DropboxFile__x/DropboxFile__x.object-meta.xml
<CustomObject>
    <description>DropboxFiles</description>
    <externalDataSource>CollectiveBackEnd</externalDataSource>
    <externalName>DropboxFiles</externalName>
    <label>DropboxFile</label>
    <pluralLabel>DropboxFiles</pluralLabel>
</CustomObject>