force-app/main/default/objects/DropboxFile__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>sfaccountid</externalDeveloperName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DropboxFiles</relationshipLabel>
    <relationshipName>DropboxFiles</relationshipName>
    <type>Lookup</type>
</CustomField>