force-app/main/default/objects/DropboxFile__x/fields/content_hash__c.field-meta.xml
<CustomField>
    <fullName>content_hash__c</fullName>
    <description>content_hash</description>
    <externalDeveloperName>content_hash</externalDeveloperName>
    <label>content_hash</label>
    <length>100</length>
    <type>Text</type>
</CustomField>