force-app/main/default/objects/DropboxFile__x/fields/created__c.field-meta.xml
<CustomField>
    <fullName>created__c</fullName>
    <description>created</description>
    <externalDeveloperName>created</externalDeveloperName>
    <label>created</label>
    <type>DateTime</type>
</CustomField>