force-app/main/default/objects/DropboxFile__x/fields/file_id__c.field-meta.xml
<CustomField>
    <fullName>file_id__c</fullName>
    <description>file_id</description>
    <externalDeveloperName>file_id</externalDeveloperName>
    <label>file_id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>