force-app/main/default/objects/DropboxFile__x/fields/filename__c.field-meta.xml
<CustomField>
    <fullName>filename__c</fullName>
    <description>filename</description>
    <externalDeveloperName>filename</externalDeveloperName>
    <label>filename</label>
    <length>200</length>
    <type>Text</type>
</CustomField>