force-app/main/default/objects/DropboxFile__x/fields/modified__c.field-meta.xml
<CustomField>
    <fullName>modified__c</fullName>
    <description>modified</description>
    <externalDeveloperName>modified</externalDeveloperName>
    <label>modified</label>
    <type>DateTime</type>
</CustomField>