force-app/main/default/objects/DropboxFile__x/fields/path__c.field-meta.xml
<CustomField>
    <fullName>path__c</fullName>
    <description>path</description>
    <externalDeveloperName>path</externalDeveloperName>
    <label>path</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>