force-app/main/default/objects/DropboxFile__x/fields/revision__c.field-meta.xml
<CustomField>
    <fullName>revision__c</fullName>
    <description>revision</description>
    <externalDeveloperName>revision</externalDeveloperName>
    <label>revision</label>
    <length>100</length>
    <type>Text</type>
</CustomField>