force-app/main/default/objects/DropboxFile__x/fields/sfaccountid__c.field-meta.xml
<CustomField>
    <fullName>sfaccountid__c</fullName>
    <description>sfaccountid</description>
    <externalDeveloperName>sfaccountid</externalDeveloperName>
    <label>sfaccountid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>