force-app/main/default/objects/DropboxFile__x/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <description>size</description>
    <externalDeveloperName>size</externalDeveloperName>
    <label>size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>