force-app/main/default/objects/DropboxFile__x/fields/subcategory__c.field-meta.xml
<CustomField>
    <fullName>subcategory__c</fullName>
    <description>subcategory</description>
    <externalDeveloperName>subcategory</externalDeveloperName>
    <label>subcategory</label>
    <length>200</length>
    <type>Text</type>
</CustomField>