force-app/main/default/objects/DropboxFile__x/fields/updated_dropbox_at__c.field-meta.xml
<CustomField>
    <fullName>updated_dropbox_at__c</fullName>
    <description>updated_dropbox_at</description>
    <externalDeveloperName>updated_dropbox_at</externalDeveloperName>
    <label>updated_dropbox_at</label>
    <type>DateTime</type>
</CustomField>