force-app/main/default/objects/DropboxFile__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>Account__c</columns>
    <columns>created__c</columns>
    <columns>email__c</columns>
    <columns>filename__c</columns>
    <columns>path__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>